--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
         "vue-router": "^3.0.1",
         "vue-schart": "^1.0.0",
         "vuedraggable": "^2.16.0",
-        "vuex": "^3.0.1",
-        "xlsx": "^0.13.5"
+        "vuex": "^3.0.1"
     },
     "devDependencies": {
         "autoprefixer": "^7.1.2",
@@ -50,7 +49,6 @@
         "postcss-import": "^11.0.0",
         "postcss-loader": "^2.0.8",
         "rimraf": "^2.6.0",
-        "script-loader": "^0.7.2",
         "semver": "^5.3.0",
         "shelljs": "^0.7.6",
         "uglifyjs-webpack-plugin": "^1.1.1",
